--- a/index.html
+++ b/index.html
@@ -120,28 +120,13 @@ table.wikitablewide td {
                 </tr>
                 <tr>
                     <td>
-                        <commented-ship-display ship="amagi" comment="Limited Build - 04:25:00 - 2%"></commented-ship-display>
-                        <commented-ship-display ship="tosa" new="true" comment="Limited Build - 04:30:00 - 2.0%"></commented-ship-display>
-                        <commented-ship-display ship="kaga_bb" comment="Limited Build - 04:30:00 - 0.5% | Event Shop - 8000 | Drop - B3/D3"></commented-ship-display>
-                        <commented-ship-display ship="ashigara" comment="Limited Build - 01:55:00 - 2.5%"></commented-ship-display>
-                        <commented-ship-display ship="hanazuki" new="true" comment="Limited Build - 00:29:00 - 2.5%"></commented-ship-display>
-                        <commented-ship-display ship="naganami" new="true" comment="Limited Build - 00:27:00 - 2.5%"></commented-ship-display>
-                        <commented-ship-display ship="makinami" comment="Point Accumulation"></commented-ship-display>
-                        <commented-ship-display ship="naka" comment="Limited Build - 01:20:00 - 5.0%"></commented-ship-display>
-                        <commented-ship-display ship="hatakaze" comment="Limited Build - 00:20:00 - 5.0% | Drop - A3/C3/B2/D2"></commented-ship-display>                        
-                        <commented-ship-display ship="little_renown" new="true" comment="NPC Trust Accumulation"></commented-ship-display>
+                        <commented-ship-display ship="tartu" comment="Limited Build - 1.4%"></commented-ship-display>
+                        <commented-ship-display ship="vauquelin" new="true" comment="NPC"></commented-ship-display>
+                        
                     </td>
                     <td>
-                        <commented-ship-display ship="amagi" comment="Limited Build - 04:25:00 - 2%"></commented-ship-display>
-                        <commented-ship-display ship="tosa" new="true" comment="Limited Build - 04:30:00 - 2.0%"></commented-ship-display>
-                        <commented-ship-display ship="kaga_bb" comment="Limited Build - 04:30:00 - 0.5% | Event Shop - 8000 | Drop - B3/D3"></commented-ship-display>
-                        <commented-ship-display ship="ashigara" comment="Limited Build - 01:55:00 - 2.5%"></commented-ship-display>
-                        <commented-ship-display ship="hanazuki" new="true" comment="Limited Build - 00:29:00 - 2.5%"></commented-ship-display>
-                        <commented-ship-display ship="naganami" new="true" comment="Limited Build - 00:27:00 - 2.5%"></commented-ship-display>
-                        <commented-ship-display ship="makinami" comment="Point Accumulation"></commented-ship-display>
-                        <commented-ship-display ship="naka" comment="Limited Build - 01:20:00 - 5.0%"></commented-ship-display>
-                        <commented-ship-display ship="hatakaze" comment="Limited Build - 00:20:00 - 5.0% | Drop - A3/C3/B2/D2"></commented-ship-display>                        
-                        <commented-ship-display ship="little_renown" new="true" comment="NPC Trust Accumulation"></commented-ship-display>
+                        <commented-ship-display ship="tartu" comment="Limited Build - 1.4%"></commented-ship-display>
+                        <commented-ship-display ship="vauquelin" new="true" comment="NPC"></commented-ship-display>
                     </td>
                 </tr>
                 <tr style="text-align:center;background-color:#24252d; font-size: 20px; text-decoration: bold; height: 45px">                
@@ -155,11 +140,9 @@ table.wikitablewide td {
                     </td>
                 </tr>
                 <tr>
-                    <td>
-                        <commented-ship-display ship="isuzu" new="true" retrofit="true"></commented-ship-display>            
+                    <td>       
                     </td>
                     <td>
-                        <commented-ship-display ship="isuzu" new="true" retrofit="true"></commented-ship-display>   
                     </td>
                 </tr>
                 <tr style="text-align:center;background-color:#24252d; font-size: 20px; text-decoration: bold; height: 45px">                
@@ -174,22 +157,15 @@ table.wikitablewide td {
                 </tr>
                 <tr>
                     <td>
-                        <commented-ship-display ship="tosa" skin="2" new="true" skin-limited="true" skin-bg="true"></commented-ship-display>
-                        <commented-ship-display ship="ashigara" skin="3" skin-limited="true" skin-bg="true" new="true"></commented-ship-display>
-                        <commented-ship-display ship="hiei" skin="4" new="true" skin-bg="true" skin-limited="true"></commented-ship-display>
-                        <commented-ship-display ship="naka" skin="2" new="true" skin-bg="true" skin-limited="true"></commented-ship-display>
-                        <commented-ship-display ship="hanazuki" skin="2" new="true" skin-limited="true" skin-bg="true"></commented-ship-display>
-                        <commented-ship-display ship="makinami" skin="2" new="true" skin-bg="true" skin-limited="true" ></commented-ship-display>
-                        <commented-ship-display ship="naganami" skin="2" new="true" skin-bg="true" skin-limited="true" "></commented-ship-display>
+                        <commented-ship-display ship="tartu" skin="2" new="true" skin-limited="true" skin-bg="true"></commented-ship-display>
+                        <commented-ship-display ship="akatsuki" skin="2" skin-limited="true" new="true"></commented-ship-display>
+                        <commented-ship-display ship="memphis" skin="2" new="true" skin-limited="true"></commented-ship-display>
+                        <commented-ship-display ship="chaser" skin="3" new="true" skin-bg="true" skin-limited="true"></commented-ship-display>
+                        <commented-ship-display ship="sussex" skin="2" new="true" skin-limited="true" skin-bg="true"></commented-ship-display>
+                        
                     </td>
                     <td>
-                        <commented-ship-display ship="tosa" skin="2" new="true" skin-limited="true" skin-bg="true"></commented-ship-display>
-                        <commented-ship-display ship="ashigara" skin="3" skin-limited="true" skin-bg="true" new="true"></commented-ship-display>
-                        <commented-ship-display ship="hiei" skin="4" new="true" skin-bg="true" skin-limited="true"></commented-ship-display>
-                        <commented-ship-display ship="naka" skin="2" new="true" skin-bg="true" skin-limited="true"></commented-ship-display>
-                        <commented-ship-display ship="hanazuki" skin="2" new="true" skin-limited="true" skin-bg="true"></commented-ship-display>
-                        <commented-ship-display ship="makinami" skin="2" new="true" skin-bg="true" skin-limited="true" ></commented-ship-display>
-                        <commented-ship-display ship="naganami" skin="2" new="true" skin-bg="true" skin-limited="true" "></commented-ship-display>
+                        <commented-ship-display ship="tartu" skin="2" new="true" skin-limited="true" skin-bg="true"></commented-ship-display>
                     </td>
                 </tr>
                 <tr style="text-align:center;background-color:#24252d; font-size: 20px; text-decoration: bold; height: 45px">                
