--- a/index.html
+++ b/index.html
@@ -120,12 +120,12 @@ table.wikitablewide td {
                 </tr>
                 <tr>
                     <td>
-                        <commented-ship-display ship="tartu" new="true" comment="Limited Build - 1.4% | Clear SP3 60 times"></commented-ship-display>
+                        <commented-ship-display ship="tartu" new="true" comment="Limited Build - 00:27:00 - 1.4% | Clear SP3 60 times"></commented-ship-display>
                         <commented-ship-display ship="vauquelin" new="true" comment="NPC"></commented-ship-display>
                         
                     </td>
                     <td>
-                        <commented-ship-display ship="tartu" new="true" comment="Limited Build - 1.4% | Clear SP3 60 times"></commented-ship-display>
+                        <commented-ship-display ship="tartu" new="true" comment="Limited Build - 00:27:00 - 1.4% | Clear SP3 60 times"></commented-ship-display>
                         <commented-ship-display ship="vauquelin" new="true" comment="NPC"></commented-ship-display>
                     </td>
                 </tr>
